--- a/app/views/negishes/show.html.erb
+++ b/app/views/negishes/show.html.erb
@@ -1,21 +1,34 @@
 <h1>詳細画面</h1>
-<table class="table table-striped">
+<div class="table-responsive">
 
-	<tr><th>Title</th></tr>
-	<tr><td><%=@negishi.title%></td></tr>
+	<table class="table table-bordered">
 
-	<tr><th>Body</th></tr>
-	<tr><td><%=@negishi.body%></td></tr>
+		<thead>
+			<tr>
+				<th>Title</th>
+				<th>Body</th>
+				<th>Image</th>
+				<th></th>
+				<th></th>
+			</tr>
+		</thead>
 
-	<tr><th>Image</th></tr>
-	<tr><td><%=attachment_image_tag @negishi, :image, format: 'jpeg', size:'100x100', class:"profile_image", fallback:"no-image.jpg", size:'100x100'%></td></tr>
+		<tbody>
+			<tr>
+				<td><%=@negishi.title%></td>
+				<td><%=@negishi.body%></td>
+				<td><%=attachment_image_tag @negishi, :image, format: 'jpeg', size:'100x100', class:"profile_image", fallback:"no-image.jpg", size:'100x100'%></td>
 
-	<tr><td><%=link_to '', edit_negish_path(@negishi),class: "btn btn-success btn-sm active glyphicon glyphicon-wrench" %></td></tr>
+				<td><div class="btn-group-vertical btn-group-lg">
+					<%=link_to '', edit_negish_path(@negishi),class: "btn btn-success btn-sm active glyphicon glyphicon-wrench" %>
+					<%=link_to '投稿一覧', negishes_path,class:"btn btn-success btn-sm active"%>
+					<%=link_to '削除', negish_path(@negishi), method: :delete, "data-confirm" => "本当に削除しますか？",class:"btn btn-success btn-sm active" %>
+				</div></td>
+				<td></td>
+			</tr>
+		</tbody>
 
-	<tr><td><%=link_to '投稿一覧', negishes_path,class:"btn btn-success btn-sm active"%></td></tr>
-	
-	<tr><td><%=link_to '削除', negish_path(@negishi), method: :delete, "data-confirm" => "本当に削除しますか？",class:"btn btn-success btn-sm active" %></td></tr>
+	</table>
 
-</table>
-
+</div>
 <!-- ,class:"btn btn-success btn-sm active" -->
