--- a/app/views/negishes/edit.html.erb
+++ b/app/views/negishes/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>編集画面</h1>
+ <h1><span class="glyphicon glyphicon-book" ></span><strong>編集画面</strong></h1>
 <%=form_for @negishi, url:negish_path(@negishi.id) do |k| %>
 
 <table class="table table-striped">
