--- a/app/views/negishes/index.html.erb
+++ b/app/views/negishes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>投稿一覧</h1>
+ <h1><span class="glyphicon glyphicon-book" ></span><strong>投稿一覧</strong></h1>
 
 <% @negishes.each do |c| %>
 
@@ -39,3 +39,5 @@
 <%=link_to 'Topへ', root_path,class:"btn btn-warning btn-lg active" %><br><br>
 
 <%=link_to '新規投稿',  new_negish_path,class:"btn btn-warning btn-lg active"%><br>
+
+ <!-- <h1><span class="glyphicon glyphicon-book" ></span><strong></strong></h1> -->
