--- a/app/views/startes/top.html.erb
+++ b/app/views/startes/top.html.erb
@@ -10,7 +10,7 @@
 
 <% end %>
 
-<h1>Art</h1>
+ <h1><span class="glyphicon glyphicon-book" ></span><strong>Art-master</strong></h1>
 
 <table class="table table-striped">
 
