--- a/app/views/negishes/new.html.erb
+++ b/app/views/negishes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>新規投稿</h1>
 
+<h1><span class="glyphicon glyphicon-book" ></span><strong>新規投稿</strong></h1>
 <%=form_for @negishi, url:'/negishes' do |f| %>
 
 <table class="table table-striped">
