--- a/app/views/negishes/show.html.erb
+++ b/app/views/negishes/show.html.erb
@@ -1,4 +1,5 @@
-<h1>詳細画面</h1>
+ <h1><span class="glyphicon glyphicon-book" ></span><strong>詳細画面</strong></h1>
+ 
 <div class="table-responsive">
 
 	<table class="table table-bordered">
